syntax = "proto3";

package proto;

option go_package = "github.com/adisnuhic/scrapper/proto";

import "google/protobuf/timestamp.proto";

service PostService{
    rpc GetAll(GetAllPostsRequest) returns (GetAllPostsResponse){}
}

message Post{
    uint64 ID = 1;
    string Title = 2;
    string Body = 3;
    google.protobuf.Timestamp CreatedAt = 4;
}

message GetAllPostsRequest{}

message GetAllPostsResponse {
    repeated Post posts = 1;
}